frontend/src/components/stylesheets/components/snippet_display.scss
.snippet-display-container {
  box-sizing: border-box;
  height: 300px;
  width: 600px;

  display: flex;
  flex-direction: column;
  background-color: $white;

  .bar-display-container {
    position: relative;
    height: inherit;
    width: inherit;
    // background-color: $black;

    .single-note {
      position: absolute;
      background-color: $black;
      height: 5px;
    }

    .progress-bar {
      position: absolute;
      height: 260px;
      width: 0;
      left: 0;
      background-color: $blue;
    }

    .progress-bar.move {
      left: 600px;
      width: 2px;
      background-color: $red;
      transition: left 8s linear, background-color 8s linear, width 200ms linear;
    }
  }

  .interaction-bar-container {
    box-sizing: border-box;
    height: 46px;
    width: inherit;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    padding: 0 1em;
    // border-bottom: 1px solid $shadow;

    .interaction-bar-left {

    }

    .interaction-bar-right {
      
      svg {
        margin-left: 1em;
      }
    }
  }
}

